add prospectus defense file

--- a/presentation/defense.tex
+++ b/presentation/defense.tex
@@ -85,12 +85,12 @@ Thus, FDI spillover and corruption
 \begin{frame}{\secname: choices}
 \uncover<1->{One actor: the government official}
 
-\uncover<2->{Choice over two-good bundle: spillover and private benefit}
+\uncover<2->{Choice over a two-good bundle: spillover and private benefits}
 \end{frame}
 
 \begin{frame}{\secname: the constraint}
 
-There is a trade off between \textit{spillover} and \textit{private benefit} because offering either cuts into the firm's profit
+There is a trade off between \textit{spillover} and \textit{private benefits} because offering either good cuts into the firm's profit
 \begin{itemize}
 \item<2-> Spillover: local content requirement
 \item<3-> Private benefit: upfront cost and uncertainty cost 
@@ -98,12 +98,6 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 
 ... and the firm wants to maintain a minimum level of profit
 
-\end{frame}
-
-\begin{frame}{\secname: parameters of the constraint}
-\uncover<1-> ``Price'' of spillover
-
-\uncover<2->{``Price'' of private benefits}
 \end{frame}
 
 \begin{frame}{\secname: parameters of the constraint}
@@ -115,6 +109,12 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 \end{frame}
 
 \begin{frame}{\secname: parameters of the constraint}
+\uncover<1-> ``Price'' of spillover
+
+\uncover<2->{``Price'' of private benefits}
+\end{frame}
+
+\begin{frame}{\secname: parameters of the constraint}
 \begin{figure}
 	\centering
     \includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/absorptive_capacity}
@@ -122,7 +122,7 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 \end{figure}
 \end{frame}
 
-\begin{frame}{\secname: utility}
+\begin{frame}{\secname: the official's utility function}
 \begin{figure}
 	\centering
     \includegraphics[width=0.75\textwidth, height=0.75\textheight,keepaspectratio]{../figure/indifference_curve}
@@ -133,8 +133,8 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 \begin{frame}{\secname: What are the assumptions?}
 \begin{enumerate}
 \item<1-> The firm only cares about its bottom line
-\item<2-> The firm is profit satisficing.
-\uncover<3->{(Can be relaxed in two-sided matching model)}
+\item<2-> The firm is profit satisficing (not profit maximizing).
+\uncover<3->{This will be relaxed using the two-sided logit matching model}
 \end{enumerate}
 \end{frame}
 
@@ -142,10 +142,10 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 
 \begin{frame}{Project 1---``price'' of spillover}
 \begin{itemize}[<+->]
-\item H: Officials extract spillover from firms with high potential for spillover and get bribes from the others
+\item Officials extract spillover from firms with high potential for spillover and get bribes from the others
 \item Empirical strategy: Instrument for \textit{spillover potential}
 \begin{itemize}[<+->]
-\item Spillover in US industries as instrument: the weak instrument issue is there but can be tested
+\item Spillover in US industries as the instrument. The weak instrument issue is there but that can be tested
 \item Question: Data from any other country that can be used to estimate spillover?
 \end{itemize}
 \end{itemize}
@@ -153,14 +153,14 @@ There is a trade off between \textit{spillover} and \textit{private benefit} bec
 
 \begin{frame}{Project 2---``price'' of private benefits}
 \begin{itemize}
-\item<1-> H: Officials extract bribes from firms for whom it costs less to bribe
+\item<1-> Officials extract bribes from firms for whom it costs less to bribe
 \item<2-> Empirical strategy: OECD anti-bribery convention as an exogenous shock to the price of bribes (diff-in-diff)
 \end{itemize}
 \end{frame}
 
 \begin{frame}{Project 3---the official's utility function}
 \begin{itemize}
-\item<1-> H: Officials with a short time horizon prefers private benefits over bribe
+\item<1-> Officials with a short time horizon prefer private benefits over bribe
 \item<2-> Empirical strategy: term-limit for Vietnamese provincial official (RDD)
 \end{itemize}
 \end{frame}
